# rust-protocol-btc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: API_SPEC.md  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  SEQUENCE_DIAGRAMS.md  TESTING_STRATEGY.md  objective.md
src/: lib.rs
src/channel/: mod.rs  state.rs  transitions.rs
src/crypto/: mod.rs
src/merkle/: mod.rs  node.rs  proof.rs  tree.rs
src/utxo/: cache.rs  models.rs  store.rs
tests/: channel_tests.rs  merkle_integration_tests.rs  merkle_tests.rs  test_concurrent_updates.rs  test_error_cases.rs  test_helpers.rs  test_multi_participant.rs  utxo_integration_tests.rs
tests/common/: mod.rs
