[package]
name = "state_channel_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ed25519-dalek = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
primitive-types = { version = "0.12", features = ["serde"] }
thiserror = "1.0"
sled = "0.34"
hex = { version = "0.4", features = ["serde"] }
bincode = "1.3"
sha3 = "0.10"

[dev-dependencies]

[profile.dev]
opt-level = 1
debug = true
