[package]
name = "state_channel_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
ed25519-dalek = { version = "2.1", features = ["serde"] }
signature = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
primitive-types = { version = "0.12", features = ["serde"] }
thiserror = "1.0"
sled = "0.34"
hex = { version = "0.4", features = ["serde"] }
bincode = "1.3"
sha3 = "0.10"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
assert_matches = "1.5"
test-case = "3.2"
serial_test = "2.0"

[profile.dev]
opt-level = 1
debug = true
